2010-05-03  Meteor Liu  <meteor1113@gmail.com>

	* init-misc.el: Add semantic-tag-folding setting.

	* init-basic.el: Pulse setting.
	: Remove semantic-tag-folding setting.

	* init-site.el: Disable visual-studio-bookmarks, use bm instead.

	* init-misc.el: Add bm.

	* init-basic.el: Enable global-semantic-mru-bookmark-mode.
	: Load semantic/analyze/refs for semantic-ia-fast-jump.
	: Refactor include-dirs.

2010-04-30  Meteor Liu  <meteor1113@gmail.com>

	* init-misc.el: Update auto-complete to 1.2
	: Add org setup for auto-complete.
	(ac-prefix-c-dot): Hack for c++(->).

2010-04-29  Meteor Liu  <meteor1113@gmail.com>

	* init-site.el (ecb-source-path): Set ecb-source-path.
	Set autoload for ecb.

	* init-basic.el (if): Don't enable desktop-save-mode in console.

	* sample-proj.el: Add. for ede-cpp-root-project sample.

	* .emacs: Update .emacs

2010-04-28  Meteor Liu  <meteor1113@gmail.com>

	* init-misc.el (require): Bind ESC-f3 to highlight-symbol-at-point
	for putty.
	(require): Bind M-f3 to highlight-symbol-at-point.
	(require): Bind C-f3 to highlight-symbol-query-replace.

2010-04-22  Meteor Liu  <meteor1113@gmail.com>

	* lisp/unicad.el: Update unicad to 1.1.5

2010-04-20  Meteor Liu  <meteor1113@gmail.com>

	* init-basic.el (cua-global-keymap): Bind <M-RET> to
	cua-set-rectangle-mark for putty.

	* init-misc.el: Enable tabbar in terminal.

	* init-basic.el ([f7]): Let f7 global.

2010-04-19  Meteor Liu  <meteor1113@gmail.com>

	* init-misc.el: Enable auto-complete-mode for fundamental-mode.
	: Disable cursor-chg and tabbar in terminal.

	* init-basic.el: Bind ESC-f4 to kill-this-buffer.
	: Bind <select> to move-end-of-line, for putty.

	* init-site.el: Bind M-f2 to viss-bookmark-next-buffer.

	* init-basic.el: Disable global-hl-line-mode.

	* init-site.el: Add semantic-ia-fast-jump-or-back, bind to f12.

2010-04-16  Meteor Liu  <meteor1113@gmail.com>

	* dotemacs.sample: Rename to .emacs.

	* init-misc.el (highlight-tail-mode): Disable highlight-tail-mode